# Practical-Approach-to-Agentic-AI

./: Dockerfile  LICENSE  README.md  deploy.sh  pyproject.toml
resources/scripts/: af_bank_bot.md  entity-relationship-diagram.md  postgres-docker.md  script.sql
src/Chapter10/agentframework/: .env-sample  nudge_customer_bot_chainlit_app.py  order_tracking_bot_chainlit_app.py  refund_status_bot_chainlit_app.py  test_tools.py  tnt_mart_tools.py
src/Chapter10/semantickernel/: .env-sample  mcp_server.py  sk_nudge_customer_bot.py  sk_nudge_customer_bot_chainlit_app.py  sk_order_tracking_bot.py  sk_order_tracking_bot_chainlit_app.py  sk_refund_status_bot_chainlit_app.py  tnt_mart_plugins.py
src/Chapter11/: .envsample  af-cot-example.py  af_chainlit_simple_weather_agent_no_trace.py  af_chainlit_simple_weather_agent_with_trace.py  sk_chainlit_simple_weather_agent_no_tracing.py  sk_chainlit_simple_weather_agent_with_tracing.py
src/Chapter11/k8s/: chainlit-app-deployment.yaml  chainlit-app-hpa.yaml  chainlit-app-service.yaml
src/Chapter3/: ner_with_ollama.py  process_orders_with_pydantic.py
src/Chapter6/: af_banking_agent_bot.py  autogen_banking_agent_bot.py  crew_banking_agent_bot.py  crew_banking_agent_bot_flow.png.html  oai_banking_agent_bot.py  sk_banking_agent_bot.py
src/Chapter7/: .env-sample  langgraph_banking_agent_bot.py  langgraph_sample.py
